                - Registered default decoders with DataSourcePackage
September 22, 2008 
                - Added CRingBufferDecoder support so that ring buffer
                  data can be decoded.
September 26, 2008
                - Provided mechanisms for buffer decoders to specify they
                  operate either on fixed sized blocks of data or on streams.
                  This is needed to ensure SpecTcl's input stage does not
                  get permanently blocked when data taking pauses or 
                  a run ends on a stream oriented pipe data source.
                - Indicated that the CRingBufferDecoder is a stream decoder.
                - Documented SpecTcl::addBufferDecoder.
                - Documented new behavior of the -format switch on the
                  attach command.
                - Xamine - integrate superimposed spectra as well
                  as base spectra.
October 2, 2008 - Add ungate context menu option to new GUI.
                - Don't write applications if the gate is -Ungated-
                  (spectrum was ungated).
                - Correct the count of buffers analyzed to account for the
                  fact that the first buffer is sequence 0 so we need
                  the first buffer to increment our buffers analyzed -> 0.

January 5, 2009 - Added gamma summary spectrum.
January 15, 2009 
                - Fix Xamine compilation errors with -pedantic.
                  Need to use reinterpret_cast to cast XtPointer ->
                  function pointers.
                - Document gamma summary spectra in the on-board html.
                - Document GUI gamma summary spectrum creator.
                - Added API docs for gamma deluxe and gamma summary spectra
February 18, 2008
                - Made the background of the button box a clear indicator of whether
                  or not SpecTcl is in a test system.
pre2:
  March 6, 2009 - Make the rEvent array hold doubles not floats.