@@ -852,4 +852,6 @@ February 18, 2008
                 - Made the background of the button box a clear indicator of whether
                   or not SpecTcl is in a test system.
 pre2:
-  March 6, 2009 - Make the rEvent array hold doubles not floats.
+  March 6, 2009  - Make the rEvent array hold doubles not floats.
+  March 18, 2009 - Fix tkcon.tcl so it does not implement a clear command
+                   that interferes with the SpecTcl clear command.
